[gd_scene load_steps=33 format=2]

[ext_resource path="res://objects/Crab/AttackArea.gd" type="Script" id=1]
[ext_resource path="res://assets/Shadow.png" type="Texture" id=2]
[ext_resource path="res://assets/Porcupine Sprite Sheet.png" type="Texture" id=3]
[ext_resource path="res://assets/Audio/porcupine_attack.wav" type="AudioStream" id=4]
[ext_resource path="res://objects/Porcupine/Porcupine.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 96, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 32, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 64, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 96, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 128, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "attacking",
"speed": 8.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": false,
"name": "hurting",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "death",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=25]
radius = 8.30471
height = 6.42617

[sub_resource type="CapsuleShape2D" id=26]
radius = 18.7186
height = 3.13497

[sub_resource type="CapsuleShape2D" id=27]
radius = 9.41837
height = 6.42609

[node name="Porcupine" type="KinematicBody2D" groups=[
"AI",
]]
collision_layer = 16
collision_mask = 63
script = ExtResource( 5 )

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 16 )
texture = ExtResource( 2 )

[node name="SpikesSprite" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( -9.51374, -1.00339 )
frames = SubResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 24 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
rotation = 1.5708
shape = SubResource( 25 )

[node name="AttackArea" type="Area2D" parent="." groups=[
"AI",
"Attack",
]]
visible = false
position = Vector2( -6.97854, 2.97302 )
collision_layer = 0
collision_mask = 5
script = ExtResource( 1 )
attack_power = 2
can_knock_coconuts_from_trees = false

[node name="Shape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 26 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2( 0, 9 )
collision_layer = 2
collision_mask = 0

[node name="Shape" type="CollisionShape2D" parent="Hurtbox"]
rotation = 1.5708
shape = SubResource( 27 )

[node name="PreAttackTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="HurtCooldown" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -4.0
pitch_scale = 1.63
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="PreAttackTimer" to="." method="_on_PreAttackTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="HurtCooldown" to="." method="_on_HurtCooldown_timeout"]
